# CKi

./: .gitmodules  Readme.md
Analyse/: Analyse.md  Analyse.md.backup
Analyse/Diagramme/: Ablaufdiagramm Testen.drawio  Use-Case-Diagramm.drawio
Arbeitsabschnitte&Grundlagen/Analyse/Diagramme/: Ablaufdiagramm Interpretation.drawio  Ablaufdiagramm Training.drawio  Use-Case-Diagramm.drawio
Arbeitsabschnitte&Grundlagen/Analysen/: Nutzwertanalyse.xlsx
Arbeitsabschnitte&Grundlagen/Datacollection/new/: (new) in 1 epoch 60000 images learningrate 0.1.csv  (new) in 1 epoch 60000 images learningrate 0.1.txt  (new) in 2 epoch 60000 images 0.1 learningrate.csv  (new) in 2 epoch 60000 images 0.1 learningrate.txt
Arbeitsabschnitte&Grundlagen/Datacollection/old/: (old) in 1 epoch 60000 images learningrate 0.01.csv  (old) in 1 epoch 60000 images learningrate 0.01.txt
Arbeitsabschnitte&Grundlagen/Datacollection/py-tensorflow/: nn.py
Arbeitsabschnitte&Grundlagen/Diagramme/: 4neurons.drawio  Ablaufdiagramm Testen.drawio  nn6verknüpft.drawio
Arbeitsabschnitte&Grundlagen/Dossier/: Themenmeldeblatt SA 3i.docx
Arbeitsabschnitte&Grundlagen/Realisation/: cost_tree.drawio
Arbeitsabschnitte&Grundlagen/Realisation/Diagramme/: Klassendiagramm_after_implementation.drawio
Design/: Design.md  Design.md.backup
Design/Diagramme/: Klassendiagramm.drawio  Klassendiagramm2.drawio
Dokumentation/Anleitungen/: Benutzeranleitung.docx  Installationsanleitung.docx
Dokumentation/CKi/: .gitignore  CKi.tcp  CKi.tex  analyse.tex  backward_propagation_math.tex  deploy.tex  design.tex  forward_propagation_math.tex  lerndokumentation.tex  literatur.bib  planung.tex  realisation.tex  testing.tex
Dokumentation/Lerndokumentation/: Lerndokumentation.docx  lerndokumentation.tex
Dossier/: Lerndokumentation.docx
Grundlagen/Analysen/: KI Visual.xlsx
Grundlagen/Datacollection/: plot.py  read total_error2.py
Grundlagen/Diagramme/: nn2detail.drawio  nn5bp.drawio
Planung/: Tasks&Meilensteine_SA_Stix.xlsx
Realisation/: .gitignore  CMakeLists.txt  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Util.cpp  Util.h  create_image.py  main.cpp
Realisation/test/: LayerTest.cpp  NetworkTest.cpp  NeuronTest.cpp  UtilTest.cpp  dummy_mnist  main.cpp  neuron.test.cpp
